RESOLVED FIXED272617
[WebGPU] https://playcanvas.github.io/#/animation/blend-trees-* are not loading
https://bugs.webkit.org/show_bug.cgi?id=272617
Summary [WebGPU] https://playcanvas.github.io/#/animation/blend-trees-* are not loading
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-12 19:11:24 PDT
Mike Wyrzykowski
Comment 2 2024-04-13 00:03:33 PDT
*** Bug 272614 has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 3 2024-04-13 00:03:51 PDT
*** Bug 272615 has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 4 2024-04-13 20:11:43 PDT
EWS
Comment 5 2024-04-15 16:05:52 PDT
Committed 277520@main (993b28656376): <https://commits.webkit.org/277520@main> Reviewed commits have been landed. Closing PR #27228 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.