[WebGPU] https://playcanvas.github.io/#/animation/blend-trees-* are not loading https://bugs.webkit.org/show_bug.cgi?id=272617 <radar://126387192>

Reviewed by Tadeu Zagallo.

Clear operation was done incorrectly leading to Metal validation
error failures in some PlayCanvas examples.

* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::loadAction):
(WebGPU::storeAction):
(WebGPU::CommandEncoder::runClearEncoder):
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::m_maxDrawCount):
(WebGPU::RenderPassEncoder::endPass):

Canonical link: https://commits.webkit.org/277520@main